# FacebookEyeTracker

./: .pre-commit-config.yaml  README.md  both.py  calibration.py  delete.py  gazeProcess.py  gazeheatplot.py  general.ipynb  generate.py  iterate.py  main.py  my_gaze_data3.csv  my_gaze_data_bea.csv  pipeline.py  pyproject.toml  requirements.txt  screenshot.py  utils.py
data/: .md
data/beatriz/times/: beatriz_posts_times.json
data/cristobal/: gaze.csv  gaze_clean.csv
data/cristobal/gaze_posts/: cristobal_gaze_1.csv  cristobal_gaze_10.csv  cristobal_gaze_11.csv  cristobal_gaze_12.csv  cristobal_gaze_13.csv  cristobal_gaze_14.csv  cristobal_gaze_15.csv  cristobal_gaze_16.csv  cristobal_gaze_17.csv  cristobal_gaze_18.csv  cristobal_gaze_19.csv  cristobal_gaze_2.csv  cristobal_gaze_20.csv  cristobal_gaze_3.csv  cristobal_gaze_4.csv  cristobal_gaze_6.csv  cristobal_gaze_7.csv  cristobal_gaze_8.csv  cristobal_gaze_9.csv
data/cristobal/times/: cristobal_posts_times.json
data/david/: gaze.csv  gaze_clean.csv
data/david/gaze_posts/: david_gaze_1.csv  david_gaze_10.csv  david_gaze_11.csv  david_gaze_12.csv  david_gaze_13.csv  david_gaze_14.csv  david_gaze_15.csv  david_gaze_16.csv  david_gaze_17.csv  david_gaze_18.csv  david_gaze_19.csv  david_gaze_2.csv  david_gaze_20.csv  david_gaze_3.csv  david_gaze_4.csv  david_gaze_5.csv  david_gaze_6.csv  david_gaze_7.csv  david_gaze_8.csv  david_gaze_9.csv
data/david/times/: david_posts_times.json
data/diego/: gaze.csv  gaze_clean.csv
data/diego/gaze_posts/: diego_gaze_1.csv  diego_gaze_11.csv  diego_gaze_12.csv  diego_gaze_13.csv  (+14 more)
data/gabriel/: asdad.ipynb  gaze.csv  gaze_clean.csv  scanpath.py
data/isidora/: asdad.ipynb  gaze.csv  gaze_clean.csv
data/javier/: gaze.csv  gaze_clean.csv
data/magdalena/: gaze.csv  gaze_clean.csv
data/porte/: gaze.csv  gaze_clean.csv
data/sebastian/: gaze.csv  gaze_clean.csv  process.ipynb
data_example/nn/: gaze.csv
examples/: analyze_data.ipynb  definitivo.csv  generate.py  launch_eye.py  my_gaze_data3.csv  my_gaze_data4.csv
eye_trackers/: my_gaze_data_bea.csv  my_gaze_data_bea_clean.csv  my_gaze_data_sebastian_clean.csv
gaze_posts/: sebastian_gaze_2.csv  sebastian_gaze_3.csv
process/: answers.json  gazeSequence.ipynb  my_gaze_data_bea.csv  my_gaze_data_bea_clean.csv  processGen.ipynb
process/eye_trackers/: my_gaze_bea_1.csv  my_gaze_bea_2.csv  my_gaze_bea_4.csv  my_gaze_bea_5.csv  my_gaze_bea_6.csv  my_gaze_bea_7.csv  my_gaze_data_bea_clean.csv
scripts/: gazeProcess.py  generate.py  match.py  multiHeatmap.py  request.py  screenshot.py  utils.py  visualizations.py
scripts/visualizations/: gazeHeatplot.py  scanpathPlot.py
tools/: batch_process.py
uni_post/: gazeProcess.py  gazeheatplot.py  generate.py  pipeline.py  readme.md  screenshot.py  utils.py
uni_post/gaze/: my_gaze_data_panda.csv  my_gaze_data_sebas.csv
(+109 files in other folders)
